[gd_scene load_steps=15 format=2]

[ext_resource path="res://Скриншот 01-01-2022 15.33.50а.png" type="Texture" id=1]
[ext_resource path="res://B52.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu.gd" type="Script" id=3]
[ext_resource path="res://startgame.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bg:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "menuanim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bg:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.5, 1.6, 2.77638, 2.87638, 3.37638, 3.47638 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 1207, 754 ), Rect2( 0, 0, 1207, 700 ), Rect2( 0, 0, 1207, 754 ), Rect2( 0, 0, 1200, 754 ), Rect2( 0, 0, 1207, 754 ), Rect2( 0, 0, 1207, 700 ), Rect2( 0, 0, 1207, 754 ), Rect2( 0, 0, 1200, 754 ), Rect2( 0, 0, 1207, 754 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bg2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("bg2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.592
anchor_right = 1.001
anchor_bottom = 1.0
margin_left = -389.0
margin_top = 4.79999
margin_right = -1.02405
custom_constants/margin_right = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 339.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 339.0
margin_bottom = 32.0
input_pass_on_modal_close_click = false
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.254902, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "ИГРАТЬ?"
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 339.0
margin_bottom = 68.0
input_pass_on_modal_close_click = false
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.254902, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "не"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 339.0
margin_bottom = 104.0
input_pass_on_modal_close_click = false
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.254902, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "не играть"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 339.0
margin_bottom = 140.0
input_pass_on_modal_close_click = false
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.254902, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "играть не играя"

[node name="anim1" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/menuanim = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="intro" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="intro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="intro"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="intro/CenterContainer"]
margin_left = 476.0
margin_top = 275.0
margin_right = 548.0
margin_bottom = 325.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "НЕ"

[node name="bg2" type="ColorRect" parent="intro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="intro"]
anims/RESET = SubResource( 9 )
anims/intro = SubResource( 10 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
